--- a/Docker_MySQL/docker-compose.yml
+++ b/Docker_MySQL/docker-compose.yml
@@ -1,8 +1,8 @@
 # Creation date : 22.08.2022
 # Created by : CSR
 # Description : Create two containers (one for the db and the other one of the administration front-end)
-# 
-version: '3.3'
+#
+version: "3.3"
 
 services:
   db:
@@ -18,20 +18,7 @@ services:
     volumes:
       - dbdata:/var/lib/mysql
       - ./scripts:/scripts
-  phpmyadmin:
-    image: phpmyadmin:5.2.0
-    container_name: pma
-    links:
-      - db
-    environment:
-      PMA_HOST: db
-      PMA_PORT: 3306
-      PMA_ARBITRARY: 1
-    restart: always
-    ports:
-      - 8081:80
 
 # The database will be persistent among containers restarts.
 volumes:
   dbdata:
-  
